--- a/gazebo_stove.yaml
+++ b/gazebo_stove.yaml
@@ -12,3 +12,4 @@ packages:
   display: !include includes/display.yaml
   climate: !include includes/climate.yaml
   buttons: !include includes/buttons.yaml
+  weather: !include includes/weather.yaml
