--- a/includes/sensors.yaml
+++ b/includes/sensors.yaml
@@ -68,13 +68,14 @@ sensor:
         # Update Nextion display
         # Update Nextion display
         - lambda: |-
-            if (id(gazebo_nextion).is_failed() == false) {
+            if (id(nextion_ready) && id(gazebo_nextion).is_failed() == false) {
               ESP_LOGI("NEXTION", "Sending temp %.1f to display", x);
               // Page 0: Update 'temp' component
               id(gazebo_nextion).send_command_printf("zero.temp.val=%d", (int)x);
-              // id(gazebo_nextion).send_command_printf("temp.val=%d", (int)x); // 'temp' might duplicate 'zero.temp', using specific page
               // Page 3: Update 'n1' (actual temperature - right side)
               id(gazebo_nextion).send_command_printf("three.n1.val=%d", (int)x);
+            } else if (!id(nextion_ready)) {
+              ESP_LOGD("NEXTION", "Skipping temp send - display not ready yet");
             } else {
               ESP_LOGW("NEXTION", "Display is_failed=true, skipping update");
             }
@@ -95,7 +96,7 @@ sensor:
     on_value:
       then:
         - lambda: |-
-            if (id(gazebo_nextion).is_failed() == false) {
+            if (id(nextion_ready) && id(gazebo_nextion).is_failed() == false) {
               ESP_LOGD("NEXTION_DEBUG", "Sending humidity %.1f%% to display", x);
               // Update 'precip' component on Page 'zero'
               id(gazebo_nextion).send_command_printf("zero.precip.val=%d", (int)x);
